# fiuba-local-assistant

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
activities/: README.md  hub.css  hub.js  index.html
activities/auto-verdadero-falso/: app.js  index.html  questions.js  styles.css
activities/ind-extractivas-teoricas/: app.js  data.js  index.html  styles.css
docs/: CHAT_PROTOCOL.md  EVAL_SET.md  IMPLEMENTATION_LOG.md  MANIFESTO.md  PLAN.md  PLAN_STUDY_CALENDAR.md  PRD.md  PRD_FUTURE.md  PRD_PERSONALIZED_STUDY_AGENT.md  PRD_STUDY_CALENDAR.md  PRD_STUDY_VAULT_MVP.md  README.md  SPRINT_A_CHECKLIST.md  STATUS.md
docs/prds/: README.md
docs/prds/01_respuestas_con_fuentes/: PRD.md
docs/prds/02_cerebro_semantico/: PRD.md
docs/prds/03_study_vault/: PRD.md
docs/prds/04_calendarizacion/: PLAN.md  PRD.md
docs/prds/05_agente_personalizado/: PRD.md
docs/prds/06_backlog/: README.md
docs/reference/: EVAL_SET.md
src/fiuba_local/: cli.py  cloud_llm.py  config.py  db.py  envfile.py  extract.py  indexer.py  ocr_scan.py  ollama_client.py  search.py  semantic.py  textops.py  web_admin.py  web_answer.py  web_study.py  webapp.py
src/fiuba_local/commands/: core.py  runtime.py  semantic.py  study.py
src/fiuba_local/static/: admin.html  admin.js  app.js  calendar.html  calendar.js  index.html  style.css
src/fiuba_local/study/: __init__.py  (+8 more)
tests/: test_chunking.py  test_cli_dispatch.py  test_semantic.py  test_study_planner.py  test_study_report_and_gcal.py  test_study_service.py  test_webapp.py
