[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fiuba-local-assistant"
version = "0.1.0"
description = "Asistente local para estudiar con apuntes propios y respuestas citadas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
semantic = ["sentence-transformers>=3.0", "pypdf>=4.0"]
dev = ["pytest>=8.0", "pypdf>=4.0"]

[project.scripts]
fiuba-local = "fiuba_local.cli:main"
fiuba-local-web = "fiuba_local.webapp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"fiuba_local" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.setuptools.packages.find]
where = ["src"]
